home page added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/frontend/public/assets/favicon.webp" />
+    <link rel="icon" type="image/webp" href="/assets/favicon.webp" />
+    <link rel="shortcut icon" href="/assets/favicon.webp" />
+    <link rel="apple-touch-icon" href="/assets/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cortex: AI Image Generator</title>
   </head>
